# EDASubagent

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
config/: settings.py
src/config/: settings.py
src/eda/: __init__.py  agent.py  cli.py  edges.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
src/tui/: __init__.py  app.py  app.tcss  screens.py
tests/: conftest.py  test_graph.py  test_schemas.py  test_tools.py
tui/: app.py
