[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "EDASubagent"
version = "0.0.1"
description = "EDA subagent for KagglerAsisstant"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain-core",
    "langgraph",
    "langchain-deepseek",
    "polars",
    "python-dotenv",
    "langfuse",
]
