[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "EDASubagent"
version = "0.0.1"
description = "EDA subagent for KagglerAsisstant"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
eda-agent = "eda.cli:main"

dependencies = [
    "langchain-core",
    "langgraph",
    "langchain-deepseek",
    "polars",
    "python-dotenv",
    "langfuse",
    "textual",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eda", "src/tui", "src/config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
